--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@swc/cli": "^0.1.55",
     "@swc/core": "^1.2.148",
     "@swc/jest": "^0.2.20",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^27.4.1",
     "@types/jstoxml": "^2.0.2",
     "@types/supertest": "^2.0.12",
@@ -11,14 +12,18 @@
     "jest": "^27.5.1",
     "supertest": "^6.2.2",
     "ts-node": "^10.6.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.5.5"
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "start": "ts-node -r tsconfig-paths/register src/server.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/server.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jstoxml": "^3.2.3",
